--- a/pokemon_app/package.json
+++ b/pokemon_app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pokemon",
+  "name": "pokemon_app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,7 +7,9 @@
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "sass": "^1.83.4",
+    "sass-loader": "^16.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,9 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "sass": "^1.83.1",
-    "sass-loader": "^16.0.4"
   }
 }
